--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Age In Minutes App</string>
+    <string name="app_name">Your Age In Minutes</string>
+    <string name="age_in_minutes">Age in minutes</string>
 </resources>
